--- a/index.html
+++ b/index.html
@@ -1,57 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Klimagalerie MHL</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container">
-    <div class="container-top">
-        <div class="image-container-top"> 
-            <img src="img1.png" alt="" class="image-top" >
+      <div class="container-top">
+        <div class="image-container-top">
+          <img src="img1.png" alt="" class="image-top" />
         </div>
         <div class="image-container-top">
-            <img src="img2.png" alt="" class="image-top"> 
-        </div>
-        <div class="image-container-top"> 
-            <img src="img5.png" alt="" class="image-top"> 
+          <img src="img2.png" alt="" class="image-top" />
         </div>
         <div class="image-container-top">
-            <img src="img3.png" alt="" class="image-top">
+          <img src="img5.png" alt="" class="image-top" />
         </div>
-        <div class="image-container-top">  
-            <img src="img4.png" alt="" class="image-top">
+        <div class="image-container-top">
+          <img src="img3.png" alt="" class="image-top" />
         </div>
-        <div class="image-container-top">  
-            <img src="/PNG Bildschirm/logo.png" alt="" class="image-top">
+        <div class="image-container-top">
+          <img src="img4.png" alt="" class="image-top" />
         </div>
-    
-    </div>
-    <div class="container-bottom">
-        <div class="image-container-bottom"> 
-            <img src="/PNG Bildschirm/logo2.png" alt="" class="image-bottom" >
+        <div class="image-container-top">
+          <img src="/PNG Bildschirm/logo.png" alt="" class="image-top" />
+        </div>
+      </div>
+      <div class="container-bottom">
+        <div class="image-container-bottom">
+          <img src="/PNG Bildschirm/logo2.png" alt="" class="image-bottom" />
         </div>
         <div class="image-container-bottom">
-            <img src="/PNG Bildschirm/img1.1.png" alt="" class="image-bottom"> 
-        </div>
-        <div class="image-container-bottom"> 
-            <img src="/PNG Bildschirm/img2.2.png" alt="" class="image-bottom"> 
+          <img src="/PNG Bildschirm/img3.3.png" alt="" class="image-bottom" />
         </div>
         <div class="image-container-bottom">
-            <img src="/PNG Bildschirm/img4.4.png" alt="" class="image-bottom">
+          <img src="/PNG Bildschirm/img2.2.png" alt="" class="image-bottom" />
         </div>
-        <div class="image-container-bottom">  
-            <img src="/PNG Bildschirm/img3.3.png" alt="" class="image-bottom">
+        <div class="image-container-bottom">
+          <img src="/PNG Bildschirm/img4.4.png" alt="" class="image-bottom" />
         </div>
-        <div class="image-container-bottom">  
-            <img src="/PNG Bildschirm/img5.5.png" alt="" class="image-bottom" style="object-fit: fill";>
+        <div class="image-container-bottom">
+          <img src="/PNG Bildschirm/img1.1.png" alt="" class="image-bottom" />
         </div>
-    
-    </div>
+        <div class="image-container-bottom">
+          <img
+            src="/PNG Bildschirm/img5.5.png"
+            alt=""
+            class="image-bottom"
+            style="margin-left: -20px"
+          />
+        </div>
+      </div>
     </div>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
