--- a/index.html
+++ b/index.html
@@ -4,53 +4,53 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <title>Klimagalerie MHL</title>
   </head>
   <body>
     <div class="container">
       <div class="container-top">
         <div class="image-container-top">
-          <img src="img1.png" alt="" class="image-top" />
+          <img src="./img1.png" alt="" class="image-top" />
         </div>
         <div class="image-container-top">
-          <img src="img2.png" alt="" class="image-top" />
+          <img src="./img2.png" alt="" class="image-top" />
         </div>
         <div class="image-container-top">
-          <img src="img5.png" alt="" class="image-top" />
+          <img src="./img5.png" alt="" class="image-top" />
         </div>
         <div class="image-container-top">
-          <img src="img3.png" alt="" class="image-top" />
+          <img src="./img3.png" alt="" class="image-top" />
         </div>
         <div class="image-container-top">
-          <img src="img4.png" alt="" class="image-top" />
+          <img src="./img4.png" alt="" class="image-top" />
         </div>
         <div class="image-container-top">
-          <img src="/PNG Bildschirm/logo.png" alt="" class="image-top" />
+          <img src="./png_bildschirm/logo.png" alt="" class="image-top" />
         </div>
       </div>
       <div class="container-bottom">
         <div class="image-container-bottom">
-          <img src="/PNG Bildschirm/logo2.png" alt="" class="image-bottom" />
+          <img src="./png_bildschirm/logo2.png" alt="" class="image-bottom" />
         </div>
         <div class="image-container-bottom">
-          <img src="/PNG Bildschirm/img3.3.png" alt="" class="image-bottom" />
+          <img src="./png_bildschirm/img3.3.png" alt="" class="image-bottom" />
         </div>
         <div class="image-container-bottom">
-          <img src="/PNG Bildschirm/img2.2.png" alt="" class="image-bottom" />
+          <img src="./png_bildschirm/img2.2.png" alt="" class="image-bottom" />
         </div>
         <div class="image-container-bottom">
-          <img src="/PNG Bildschirm/img4.4.png" alt="" class="image-bottom" />
+          <img src="./png_bildschirm/img4.4.png" alt="" class="image-bottom" />
         </div>
         <div class="image-container-bottom">
-          <img src="/PNG Bildschirm/img1.1.png" alt="" class="image-bottom" />
+          <img src="./png_bildschirm/img1.1.png" alt="" class="image-bottom" />
         </div>
         <div class="image-container-bottom">
           <img
-            src="/PNG Bildschirm/img5.5.png"
+            src="./png_bildschirm/img5.5.png"
             alt=""
             class="image-bottom"
-            style="margin-left: -20px"
+            style="margin-left: -15px"
           />
         </div>
       </div>
